--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -13,17 +13,48 @@
 [[main]]
   name = "Posts"
   pageRef = "posts"
+  weight = 5
+
+[[main]]
+  name = "Shortcodes"
+  pageRef = "shortcodes"
   weight = 10
 
 #[[main]]
 #  name = "Parent"
 #  weight = 20
 
-#[[main]]
-#  name = "example sub-menu 1"
-#  parent = "Parent"
-#  pageRef = "posts"
-#  weight = 20
+[[main]]
+name = "Examples"
+weight = 15
+
+[[main]]
+name = "Samples"
+parent = "Examples"
+pageRef = "samples"
+weight = 20
+
+[[main]]
+name = "Showcase"
+parent = "Examples"
+pageRef = "showcase"
+weight = 30
+
+[[main]]
+name = "Recipes"
+parent = "Examples"
+pageRef = "showcase"
+weight = 35
+
+[[main]]
+  name = "Users"
+  pageRef = "users"
+  weight = 40
+
+[[main]]
+  name = "Merch"
+  pageRef = "merch"
+  weight = 45
 
 #[[main]]
 #  name = "example sub-menu 2"
@@ -50,7 +81,7 @@
 [[main]]
   name = "Tags"
   pageRef = "tags"
-  weight = 30
+  weight = 70
 
 
 # -- Footer Menu --
